# halftone-py

./: README.md  pyproject.toml
halftone/: main.py
